--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
 <h1>this is greate</h1>
 <img src="climb.jpg">
+<img src="forest claim.jpg">
 <p id="first">This is sentence 1.</p>
 <p>This is sentence 2.</p>
 </body>
