--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <img src="climb.jpg">
 <img src="forest claim.jpg">
 <img src="ice climb.jpg">
+<img src="nigth climb.jpg">
+<img src="desert climb.jpg">
 <p id="first">This is sentence 1.</p>
 <p>This is sentence 2.</p>
 </body>
