--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <img src="ice climb.jpg">
 <img src="desert climb.jpg">
 <img src="snow climb.jpg">
+<img src="night climb.jpg">
 <p id="first">This is sentence 1.</p>
 <p>This is sentence 2.</p>
 </body>
