--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <img src="desert climb.jpg">
 <img src="snow climb.jpg">
 <img src="night climb.jpg">
+<img src="U .jpg">
 <p id="first">This is sentence 1.</p>
 <p>This is sentence 2.</p>
 </body>
