--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <img src="snow climb.jpg">
 <img src="night climb.jpg">
 <img src="air.jpg">
+<img src="sun.jpg">
 <p id="first">This is sentence 1.</p>
 <p>This is sentence 2.</p>
 </body>
