--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <img src="night climb.jpg">
 <img src="air.jpg">
 <img src="sun.jpg">
+<img src="2.jpg">
 <p id="first">This is sentence 1.</p>
 <p>This is sentence 2.</p>
 </body>
