--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <img src="climb.jpg">
 <img src="forest claim.jpg">
 <img src="ice climb.jpg">
-<img src="image.jpg">
+<img src="3.jpg">
 <img src="desert climb.jpg">
 <img src="snow climb.jpg">
 <img src="night climb.jpg">
