--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <img src="air.jpg">
 <img src="sun.jpg">
 <img src="2.jpg">
-<p id="first">This is sentence 1.</p>
-<p>This is sentence 2.</p>
+<p id="first">certain animals can also climb.</p>
+<img src="fun climb.jpg">
+<p>this is sentence two.</p>
 </body>
 </html>
