--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <img src="sun.jpg">
 <img src="2.jpg">
 <p id="first">certain animals can also climb.</p>
-<img src="g climb.jpg">
+<img src="g .jpg">
 <p>this is sentence two.</p>
 </body>
 </html>
