--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <img src="2.jpg">
 <p id="first">certain animals can also climb.</p>
 <img src="g .jpg">
+<img src="l.jpg">
 <p>this is sentence two.</p>
 </body>
 </html>
