--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 <p id="first">certain animals can also climb.</p>
 <img src="g.jpg">
 <img src="l.jpg">
-<p>this is sentence two.</p>
+<p>this is fun.</p>
 </body>
 </html>
